# Seller.Application/Features/Account/Commands/ForgetPassword/ForgetPasswordCommandHandler.go
@@ -22,5 +22,5 @@ func (handler ForgetPasswordCommandHandler) HandlerFunc(command ForgetPasswordCo
 	tokenExp := time.Now().Add(2 * time.Minute)
 	token, _ := Common.GenerateToken(user.Id, tokenExp)
 
-	return (Common.ResponseModel[string]{}).ApiResponse(token, Common.SUCCESS)
+	return (Common.ResponseModel[string]{}).ApiResponse(&token, Common.STATUS_SUCCESS)
 }
