# docs/swagger.json
@@ -162,6 +162,27 @@
                 }
             }
         },
+        "/Common/UploadFile": {
+            "post": {
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ],
+                "tags": [
+                    "Common"
+                ],
+                "summary": "Upload Single File",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Common.ResponseModel-string"
+                        }
+                    }
+                }
+            }
+        },
         "/Products/GetProductDetail": {
             "get": {
                 "security": [
